--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "weight-and-balance",
   "version": "0.1.0",
+  "homepage": "https://jetzhou.github.io/weight-and-balance",
   "private": true,
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.31.3",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14"
+  },
+  "devDependencies": {
+    "gh-pages": "1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
