--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "recharts": "file:../recharts"
   },
   "devDependencies": {
     "gh-pages": "1.0.0"
